Fix homepage spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,7 +63,7 @@ body h1, h2, h3, h4, p, a {
 
 .strategy-page h3, .innovation-page h3, .execution-page h3 {
 	font-size: 1.5rem;
-	width: 85%;
+	width: 90%;
 	text-align: left;
 }
 
@@ -103,7 +103,6 @@ body h1, h2, h3, h4, p, a {
 .right-side img, .left-side img {
 	max-width: 100%;
     max-height: 85vh;
-    min-height: 45vh;
     
 	border: 0.4vw solid #fff;
 }
@@ -115,8 +114,8 @@ body h1, h2, h3, h4, p, a {
 	grid-template-columns: 1fr;
 	grid-template-rows: auto auto;
 
-    width: 85%;
-    margin: 0 3vw 1.5rem 3vw;
+    width: 90%;
+    margin: 0 0 1.5rem 0;
 }
 
 .title h1 {
@@ -179,12 +178,12 @@ body h1, h2, h3, h4, p, a {
 
 	vertical-align: middle;
 
-    margin: 1.5rem 3vw 0 3vw;
-    width: 85%;
+    margin: 1.5rem 0 0 0;
+    width: 90%;
 }
 
 .content-margin {
-	margin: 1.5rem 3vw 0 3vw;
+	width: 90%;
 }
 
 .personal-experience h1 {
@@ -199,6 +198,12 @@ body h1, h2, h3, h4, p, a {
 	color: #000;
 	padding: 3vh 0;
 
+}
+
+.innovation-page .title, .innovation-page .content-margin, 
+.innovation-page .personal-experience {
+	width: 90%;
+	margin-left: 8%;
 }
 /* Personal experience */
 
